changes to the portfolio details page - 1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -94,7 +94,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/bru_profile.jpg" class="img-fluid" alt="">
+            <img src="assets/img/brunda_profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-2 pt-lg-0 content" data-aos="fade-left">
             <h3>Architect | Designer | Artist</h3>
@@ -275,23 +275,23 @@
               <h4>Junior Architect</h4>
               <h3>KK & GL Associates</h3>
               <p><em>BSK 3rd stage, Bengaluru, Karnataka, India</em></p>
-              <h5>November 2020 - November 2021</h5>
-              <p class="firm-intro"><b>Firm Intro:</b> Lead by principal architects Santhosh Garudanagiri and Krishna Kumar. The firm is known for transforming basic brick and mortar into extraordinary spaces. They professionally enterprise visualizes, ideates and implement residential, commercial and/or industrial projects that redefine a particular area's architectural landscape at large. It has the know-how to cater to a diverse set of industries spanning hospitality, education, healthcare, IT, retail,turn-keyprojects.</p>
+              <h5>November 2020 - December 2021</h5>
+              <p class="firm-intro"><b>Firm Intro:</b> Lead by principal architects Santhosh Garudanagiri and Krishna Kumar. The firm is known for transforming basic brick and mortar into extraordinary spaces. They professionally enterprise visualizes, ideates and implement residential, commercial and/or industrial projects that redefine a particular area's architectural landscape at large. It has the know-how to cater to a diverse set of industries spanning hospitality, education, healthcare, IT, retail, turn-keyprojects.</p>
               <p class="firm-projects"><b>Type of Projects:</b> Apartments, Showrooms, Residents, Renovation Projects, Commercial, Cafe and Restaurants, Ayurvedic Colleges and Hospitals research, Destination Wedding, cooperative bank.<p>
               <p class="scope-of-work"><b>Scope of Work:</b> </p>
               <ul>
                 <li>Participated in all stages of design and construction processes on 8-10 projects.</li>
-                <li>Involved in developing schematic plans,3-D Models, Renders and Interior Design Details.</li>
+                <li>Involved in developing schematic plans, 3-D Models, Renders and Interior Design Details.</li>
                 <li>Conducted Site Visits and Co-ordination on Design with structural and other consultants.</li>
-                <li>Managed 3-5 projects / tasks at a given time while under pressure.</li>
-                <li>Lead the design,development,implementation and material selection stages of building.</li>
+                <li>Managed 3-5 projects and tasks at a given time.</li>
+                <li>Led the design, development, implementation and material selection stages of building.</li>
               </ul>
             </div>
 
             <div class="resume-item">
               <h4>Freelance Architect & Artist</h4>
               <p><em>Bengaluru, Karnataka, India</em></p>
-              <h5>December 2019 - October 2020</h5>
+              <h5>December 2019 - Present</h5>
 
               <p class="scope-of-work"><b>Design:</b></p>
               <ul>
@@ -319,7 +319,7 @@
               <p><em>Jayanagar, Bengaluru, Karnataka, India</em></p>
               <h5>January 2019 - June 2019, July 2019 - December 2019</h5>
               <p><a href="https://spacioarchitects.in/">Spacio Architects Website</a></p>
-              <p class="firm-intro"><b>Firm Intro:</b> SPACIO ARCHITECTS is a multidisciplinary architecture structure interior and landscape planning firm in Bangalore, founded in 2018. The firm works in multiple scales and with various organizations right from individual clients to corporate and NGOs. This allows them to experiment and diversify work on different platforms.</p>
+              <p class="firm-intro"><b>Firm Intro:</b> Spacio Architects is a multidisciplinary architecture structure interior and landscape planning firm in Bangalore, founded in 2018. The firm works in multiple scales and with various organizations right from individual clients to corporate and NGOs. This allows them to experiment and diversify work on different platforms.</p>
               <p class="firm-projects"><b>Type of Projects:</b> Luxury Villas, High End Residences and Unique Office Spaces as well as Hospitality, Commercial, and Educational Institutions.<p>
               <p class="scope-of-work"><b>Scope of Work:</b> </p>
               <ul>
@@ -340,7 +340,7 @@
               <p class="scope-of-work"><b>Scope of Work:</b> </p>
               <ul>
                 <li>Training in a set of working drawings and design development process.</li>
-                <li>Part plan,modeling of micro design options, translation of requirements into functional plans.</li>
+                <li>Part plan, modeling of micro design options, translation of requirements into functional plans.</li>
                 <li>Trained to work & coordinate detail set of drawings, MOM and project management and aid assistance.</li>
                 <li>Assigned to Site visits, building study, material study and its implications in design decisions.</li>
               </ul>
@@ -376,7 +376,7 @@
           <div class="col-lg-8" data-aos="fade-up">
             <div class="resume-item">
               <h4>Architectural Imagination by Harvard University, edx open course</h4>
-              <h5>2014 - 2019</h5>
+              <h5>2021 - Present</h5>
               <p><a href="https://www.edx.org/course/the-architectural-imagination">Coursework</a></p>
             </div>
           </div>
@@ -386,7 +386,7 @@
           <div class="col-lg-8" data-aos="fade-up">
             <div class="resume-item">
               <h4>Sustainable Architecture, IIT Roorkee, NPTEL open course</h4>
-              <h5>2014 - 2019</h5>
+              <h5>2021 - Present</h5>
               <p><a href="https://nptel.ac.in/courses/124/107/124107011/">Coursework</a></p>
             </div>
           </div>
@@ -463,49 +463,59 @@
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-academic">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-1/project-1-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/urban-design/urban-design-render.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-1/project-1-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/urban-design/urban-design-render.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development"><i class="bx">view</i></a>
                 <a href="portfolio-project-1.html" title="More Details"><i class="bx">open</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-8 portfolio-item filter-academic">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-2/project-2-1.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-2/project-2-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Breathable Café"><i class="bx">view</i></a>
-                <a href="portfolio-project-2.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-8 portfolio-item filter-comptetion" id="portfolio-reimagine-urban-spaces">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-3/project-3-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/singapura-project/singapura-project-plan.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-3/project-3-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/singapura-project/singapura-project-plan.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
                 <a href="portfolio-project-3.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-8 portfolio-item filter-internship">
+          <div class="col-lg-9 col-md-8 portfolio-item filter-internship">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-4/project-4-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-4/project-4-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Residence of Harmony"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Residence of Harmony"><i class="bx">view</i></a>
                 <a href="portfolio-project-4.html" title="More Details"><i class="bx">open</i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-11 col-md-8 portfolio-item filter-freelance">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/bakery-store/bakery-store-plan-1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/bakery-store/bakery-store-plan-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Renovation of Garage into Bakery Store"><i class="bx">view</i></a>
+                <a href="portfolio-project-6.html" title="More Details"><i class="bx">open</i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-12 col-md-8 portfolio-item filter-academic">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-2.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Breathable Café"><i class="bx">view</i></a>
+                <a href="portfolio-project-2.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-jr-architect">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-5/project-5-3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/madhu-silks/madhu-silks-plan.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-5/project-5-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Madhu Silks Showroom"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/madhu-silks/madhu-silks-plan.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Madhu Silks Showroom"><i class="bx">view</i></a>
                 <a href="portfolio-project-5.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
@@ -513,19 +523,9 @@
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-freelance">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-6/project-6-3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/freelance-projects/entrance-gate-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-6/project-6-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Renovation of Garage into Bakery Store"><i class="bx">view</i></a>
-                <a href="portfolio-project-6.html" title="More Details"><i class="bx">open</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-8 portfolio-item filter-freelance">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-7/project-7-8.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/project-7/project-7-8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Freelance"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/freelance-projects/entrance-gate-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Freelance"><i class="bx">view</i></a>
                 <a href="portfolio-project-7.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
