--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 1</h2>
+          <h2>Urban Design</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 1</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Urban Design</li>
           </ol>
         </div>
 
@@ -87,18 +87,49 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="portfolio-details" class="portfolio-details"> 
       <div class="container">
-
         <div class="row gy-4">
 
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <!-- <div class="swiper-slide"> -->
-                  <img src="assets/img/portfolio/project-1/project-1-1.jpg" alt="">
-                <!-- </div>-->
+                <div class="swiper-slide">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/urban-design/urban-design-render.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/urban-design/urban-design-render.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
+                  </div>
+
+                <div class="swiper-slide">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/urban-design/urban-design-plan-1.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/urban-design/urban-design-plan-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
+                  </div>
+
+                <div class="swiper-slide">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/urban-design/urban-design-plan-2.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/urban-design/urban-design-plan-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
+                  </div>
+
+                <div class="swiper-slide">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/urban-design/urban-design-plan-3.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/urban-design/urban-design-plan-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
+                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -115,6 +146,7 @@
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
+
             <div class="portfolio-description">
               <h2>Urban intervention, transport oriented development</h2>
               <p>
@@ -123,11 +155,7 @@
             </div>
           </div>
 
-        </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
