--- a/portfolio-project-2.html
+++ b/portfolio-project-2.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 2</h2>
+          <h2>Breathing Cafe</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 2</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Breathing Cafe</li>
           </ol>
         </div>
 
@@ -97,15 +97,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-2/project-2-1.png" alt="">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/breathing-cafe/breathing-cafe-render.png" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <!-- <a href="assets/img/portfolio/project-2/project-2-1.png" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a> -->
+                      <i class="bx"><a href="assets/img/portfolio/breathing-cafe/breathing-cafe-render.png" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots">view</i></a>
+                    </div>
+                  </div>
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-2/project-2-2.png" alt="">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-1.png" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-2/project-2-3.png" alt="">
+                  <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-2.png" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                      <a href="assets/img/portfolio/breathing-cafe/breathing-cafe-plan-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
+                    </div>
+                  </div>
                 </div>
 
               </div>
