--- a/portfolio-project-5.html
+++ b/portfolio-project-5.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 5</h2>
+          <h2>Madhu Silks Showroom</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 5</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Madhu Silks Showroom</li>
           </ol>
         </div>
 
@@ -97,23 +97,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-5/project-5-1.png" alt="">
+                  <img src="assets/img/portfolio/madhu-silks/madhu-silks-render-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-5/project-5-2.png" alt="">
+                  <img src="assets/img/portfolio/madhu-silks/madhu-silks-render-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-5/project-5-3.png" alt="">
+                  <img src="assets/img/portfolio/madhu-silks/madhu-silks-render-3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-5/project-5-4.png" alt="">
+                  <img src="assets/img/portfolio/madhu-silks/madhu-silks-render-4.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-5/project-5-5.png" alt="">
+                  <img src="assets/img/portfolio/madhu-silks/madhu-silks-plan.png" alt="">
                 </div>
 
               </div>
