--- a/portfolio-project-6.html
+++ b/portfolio-project-6.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 6</h2>
+          <h2>Bakery Store</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 6</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Bakery Store</li>
           </ol>
         </div>
 
@@ -97,15 +97,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-6/project-6-1.jpg" alt="">
+                  <img src="assets/img/portfolio/bakery-store/bakery-store-front.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-6/project-6-2.png" alt="">
+                  <img src="assets/img/portfolio/bakery-store/bakery-store-plan-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-6/project-6-3.png" alt="">
+                  <img src="assets/img/portfolio/bakery-store/bakery-store-plan-2.png" alt="">
                 </div>
 
 
