--- a/portfolio-project-7.html
+++ b/portfolio-project-7.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 7</h2>
+          <h2>Freelance Projects</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 7</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Freelance Projects</li>
           </ol>
         </div>
 
@@ -97,35 +97,35 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-1.jpg" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/entrance-gate-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-2.jpg" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/villa-rendering.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-3.png" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/corridor-pillars.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-4.png" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/row-housing.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-5.jpg" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/quadrangle.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-6.jpg" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/villa-rendering-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-7.jpg" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/house-staircase.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/project-7/project-7-8.png" alt="">
+                  <img src="assets/img/portfolio/freelance-projects/hotel-suite.png" alt="">
                 </div>
 
               </div>
