--- a/portfolio-project-3.html
+++ b/portfolio-project-3.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 3</h2>
+          <h2>Singapura Project</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 3</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>Singapura Project</li>
           </ol>
         </div>
 
@@ -97,7 +97,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <!-- <div class="swiper-slide"> -->
-                  <img src="assets/img/portfolio/project-3/project-3-1.png" alt="">
+                  <img src="assets/img/portfolio/singapura-project/singapura-project-plan.png" alt="">
                 <!-- </div> -->
 
               </div>
