--- a/portfolio-project-4.html
+++ b/portfolio-project-4.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Project 4</h2>
+          <h2>The Residence of Harmony</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Project 4</li>
+            <li><a href="index.html#portfolio">Home-Portfolio</a></li>
+            <li>The Residence of Harmony</li>
           </ol>
         </div>
 
@@ -89,11 +89,10 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+        <!-- <div class="row gy-4"> -->
+          <div class="col-lg-12">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
+<!--            <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
@@ -116,7 +115,49 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
+-->
 
+        <div class="row portfolio-container">
+
+          <div class="col-lg-6 col-md-8 portfolio-item">
+              <div class="isotope-item">
+              <img src="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-1.jpg" class="img-fluid" alt="">
+                <div class="isotope-overlay">
+                  <a href="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development">view</a>
+                </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-8 portfolio-item">
+            <div class="isotope-item">
+              <img src="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-2.jpg" class="img-fluid" alt="">
+              <div class="isotope-overlay">
+                <a href="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development">view</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-8 portfolio-item">
+            <div class="isotope-item">
+              <img src="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-3.jpg" class="img-fluid" alt="">
+              <div class="isotope-overlay">
+                <a href="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development">view</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-8 portfolio-item">
+            <div class="isotope-item">
+              <img src="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-4.jpg" class="img-fluid" alt="">
+              <div class="isotope-overlay">
+                <a href="assets/img/portfolio/residence-of-harmony/residence-of-harmony-render-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development">view</a>
+              </div>
+            </div>
+          </div>
+
+  </div>
+
+        <div class="row gy-4">
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
@@ -128,6 +169,9 @@
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
+          </div>
+
+          <div class="col-lg-8">
             <div class="portfolio-description">
               <h2>The Residence of Harmony</h2>
               <p>
@@ -139,7 +183,6 @@
             </div>
           </div>
 
-        </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
