--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
         <div class="row">
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
+            
+            <div class="resume-item">
+              <h4>Junior Architect</h4>
+              <h3>Varmyne Studio</h3>
+              <p><em>Bengaluru, Karnataka, India</em></p>
+              <h5>January 2022 - Present</h5>
+            </div>
+
             <div class="resume-item">
               <h4>Junior Architect</h4>
               <h3>KK & GL Associates</h3>
