--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
             
             <div class="resume-item">
-              <h4>Junior Architect</h4>
+              <h4>Interior Designer & Project Architect</h4>
               <h3>Varmyne Studio</h3>
               <p><em>Bengaluru, Karnataka, India</em></p>
               <h5>January 2022 - Present</h5>
